2004-12-27  Noah Misch  <noah@cs.caltech.edu>

	* BUGS (Minor Problems): Warn about makefile limitations.
	* Makefile.am: Find and update `INSTALL' in $(srcdir).
	* man/Makefile.am: Find and update manual pages in $(srcdir).

2004-12-24  Eric Blake  <ebb9@byu.net>

	* lib/m4sugar/m4sh.m4 (_AS_DETECT_BETTER_SHELL): Test candidate
	shells in subshell, to avoid noise from ash.  (trivial change)

2004-12-22  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Limitations of Builtins) <case>: Mention
	problems with SunOS ksh and backslash escaping, Bourne shells and
	closing brackets (both within character classes).  Bug reported
	against Libtool by Alexander Kurz <alexander.kurz@qsc.de>.
	<read>: New entry.  Mention non-availability of -r.

2004-12-21  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_LINE): Don't add srcdir here, to
	avoid cluttering displayed messages.  Rather, prepend srcdir where
	AT_LINE is used for log files.

2004-12-21  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/status.m4: Quote ``$tmp'' in many places.
	* lib/m4sugar/m4sh.m4 (AS_TMPDIR): Fix the comment, as traps are
	  no longer part of the macro, quote the occurrence of ``$tmp''.
	* doc/autoconf.texi (Forbidden Patterns): Typo.

2004-12-21  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Make sure the "ok" etc. are
	separated from the test title by forcing a white space.

2004-12-21  Akim Demaille  <akim@epita.fr>

	Enable Emacs navigation within testsuite.log files.

	* lib/autotest/general.m4 (AT_CLEANUP): Add an hint for Emacs to
	use the compilation mode.
	(AT_LINE): Point to the srcdir.

2004-12-19  Noah Misch  <noah@cs.caltech.edu>

	* tests/Makefile.am (installcheck-local): Use $(bindir).
	(check-local, installcheck-local): Pass TESTSUITEFLAGS.
	* doc/autoconf.texi (Making testsuite Scripts): Recommend the same
	Makefile.am scheme Autoconf now uses.

2004-12-18  Noah Misch  <noah@cs.caltech.edu>
